[gd_scene load_steps=7 format=3 uid="uid://xka73kt1u6nu"]

[ext_resource type="PackedScene" uid="uid://ba342ggtlibo8" path="res://fish_2.glb" id="1_dum73"]
[ext_resource type="Script" uid="uid://cgy0qs25rgpxw" path="res://fish_2.gd" id="2_xtpvn"]
[ext_resource type="AudioStream" uid="uid://tr7bq0bgfcvm" path="res://explosion.wav" id="3_xayy2"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_qudxn"]
height = 3.0

[sub_resource type="GDScript" id="GDScript_b5h2m"]
script/source = "extends Node3D

const BULLET = preload(\"res://bullet.tscn\")
@onready var raycast = $\"../RayCast3D\"

func _on_shoot_timer_timeout() -> void:
	if raycast.is_colliding():
		var hit = raycast.get_collider()
		if hit.is_in_group(\"player\"):
			var bang = BULLET.instantiate()
			add_child(bang)
			bang.global_transform = global_transform
"

[sub_resource type="SphereShape3D" id="SphereShape3D_l4xox"]
radius = 1.5

[node name="fish_2" type="CharacterBody3D" groups=["Enemy"]]
transform = Transform3D(-0.9, 0, -1.35896e-07, 0, 0.9, 0, 1.35896e-07, 0, -0.9, 0, 0.00365281, 0)
script = ExtResource("2_xtpvn")

[node name="fish_2" parent="." instance=ExtResource("1_dum73")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, -1.42109e-14, 4.23516e-22, 0, -4.37114e-08, -1, 1.42109e-14, 1, -4.37114e-08, 4.44089e-16, -0.0368875, -0.0264902)
shape = SubResource("CapsuleShape3D_qudxn")

[node name="eyes" type="Node3D" parent="."]
transform = Transform3D(1, 0, -5.68434e-14, 0, 1, 0, 5.68434e-14, 0, 1, 0, -0.0454635, 0)
script = SubResource("GDScript_b5h2m")

[node name="RayCast3D" type="RayCast3D" parent="."]
transform = Transform3D(30, -4.54747e-13, 2.71051e-20, 0, -1.31134e-06, -30, 4.54747e-13, 30, -1.31134e-06, 0, -0.0175063, 0)
collision_mask = 3

[node name="area" type="Area3D" parent="."]
transform = Transform3D(1, 0, -2.84217e-14, 0, 1, 0, 2.84217e-14, 0, 1, 0, 0.00830809, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="area"]
transform = Transform3D(20, 0, 0, 0, 20, 0, 0, 0, 20, 0, 0, 0)
shape = SubResource("SphereShape3D_l4xox")

[node name="shoot_timer" type="Timer" parent="."]

[node name="check_timer" type="Timer" parent="."]
autostart = true

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_xayy2")

[connection signal="body_entered" from="area" to="." method="_on_area_body_entered"]
[connection signal="body_exited" from="area" to="." method="_on_area_body_exited"]
[connection signal="timeout" from="shoot_timer" to="." method="_on_shoot_timer_timeout"]
[connection signal="timeout" from="shoot_timer" to="eyes" method="_on_shoot_timer_timeout"]
[connection signal="timeout" from="check_timer" to="." method="_on_check_timer_timeout"]
